Fixed font colors for readability

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: whitesmoke;
 }
 h1 {
   font-size: 3.5rem;
